[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "gitpulse"
dynamic = ["version"]
description = "Batch-update multiple git repositories in parallel"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "prodrom3", email = "7604466+prodrom3@users.noreply.github.com" },
]
maintainers = [
    { name = "radamic" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.scripts]
gitpulse = "core.cli:main_entry"

[project.urls]
Homepage = "https://github.com/prodrom3/gitpulse"
Repository = "https://github.com/prodrom3/gitpulse"
Issues = "https://github.com/prodrom3/gitpulse/issues"

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.setuptools.packages.find]
include = ["core*"]

[tool.setuptools.package-data]
core = ["py.typed"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
