[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nostos"
dynamic = ["version"]
description = "Batch-update multiple git repositories in parallel"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "prodrom3", email = "7604466+prodrom3@users.noreply.github.com" },
]
maintainers = [
    { name = "radamic" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.optional-dependencies]
completion = ["argcomplete>=3.0"]

[project.scripts]
nostos = "core.cli:main_entry"

[project.urls]
Homepage = "https://github.com/prodrom3/nostos"
Repository = "https://github.com/prodrom3/nostos"
Issues = "https://github.com/prodrom3/nostos/issues"

[tool.setuptools]
py-modules = ["nostos"]

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.setuptools.packages.find]
include = ["core*"]

[tool.setuptools.package-data]
core = ["py.typed"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
